--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "DEBUG=Eleventy* eleventy --watch",
     "sass": "gulp sass",
     "sass-watch": "gulp",
-    "post:new": "node ./_scripts/new-post.js"
+    "post:new": "node ./_scripts/new-post.js "
   },
   "keywords": [
     "stevenhicks.me"
@@ -20,6 +20,7 @@
     "@11ty/eleventy": "^0.11.1",
     "@jlengstorf/get-share-image": "^0.8.0",
     "concurrently": "^5.3.0",
+    "fs-extra": "^9.1.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "live-server": "^1.2.1",
