--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -1,5 +1,10 @@
 name: Merge Schedule
 on:
+  pull_request:
+    types:
+      - opened
+      - edited
+      - synchronize
   schedule:
     # 30 14 * * * - 14:30 UTC every day
     - cron: 5 * * * *
