use us central time zone for merge-schedule action

--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -14,5 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: gr2m/merge-schedule-action@v1
+        with:
+          time_zone: "America/Chicago"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
