add ability to run merge-schedule on demand

--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -8,6 +8,7 @@ on:
   schedule:
     # 15 14 * * * - 14:15 UTC every day
     - cron: 15 14 * * MON-FRI
+  workflow_dispatch:
 
 jobs:
   merge_schedule:
