--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -7,7 +7,7 @@ on:
       - synchronize
   schedule:
     # 15 14 * * * - 14:15 UTC every day
-    - cron: 15 14 * * MON-FRI
+    - cron: "*/5 * * MON-FRI"
   workflow_dispatch:
 
 jobs:
