--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -14,7 +14,7 @@ jobs:
   merge_schedule:
     runs-on: ubuntu-latest
     steps:
-      - uses: pepopowitz/merge-schedule-action@debugging
+      - uses: gr2m/merge-schedule-action@v1
         with:
           time_zone: 'America/Chicago'
         env:
